--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" id="email" class="form-control" placeholder="Masukkan Email">
-            </div>
+
 
             <div class="form-group">
-              <label for="telp">Email</label>
+              <label for="telp">No Telp</label>
               <input type="tel" id="telp" class="form-control" placeholder="Masukkan No telepon">
             </div>
 
