--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <form >
-            <div class="form-group">
+            <div action ="send.php" class="form-group" method="post">
               <label for="nama">Nama</label>
               <input type="text" id="nama" class="form-control" placeholder="Masukkan Nama">
             </div>
