--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       </div>
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-          <form >
-            <div action ="send.php" class="form-group" method="post">
+          <form action ="send.php" method="post">
+            <div  class="form-group" >
               <label for="nama">Nama</label>
               <input type="text" id="nama" class="form-control" placeholder="Masukkan Nama">
             </div>
